--- a/Stroke_Prediction.ipynb
+++ b/Stroke_Prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2ce70cd8",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "05016a0b",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "fb566e3e",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "1c7e2b0c",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "92806333",
    "metadata": {},
    "outputs": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "01103b30",
    "metadata": {},
    "outputs": [
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "6db70c84",
    "metadata": {},
    "outputs": [
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "dd3622b1",
    "metadata": {},
    "outputs": [
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "0d7a38f6",
    "metadata": {},
    "outputs": [],
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "f5c23a1f",
    "metadata": {},
    "outputs": [],
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "6d77b878",
    "metadata": {},
    "outputs": [],
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "e876f934",
    "metadata": {},
    "outputs": [],
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "9c1899da",
    "metadata": {},
    "outputs": [
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "c6fa8fb5",
    "metadata": {},
    "outputs": [],
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "ce0ffbdb",
    "metadata": {},
    "outputs": [
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "c361844a",
    "metadata": {},
    "outputs": [
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "e79160c8",
    "metadata": {},
    "outputs": [],
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "c9bfe6e1",
    "metadata": {},
    "outputs": [
@@ -956,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "466ad82b",
    "metadata": {},
    "outputs": [
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "4593e27b",
    "metadata": {},
    "outputs": [
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "6134b6fe",
    "metadata": {},
    "outputs": [
@@ -1047,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "00dbeb67",
    "metadata": {},
    "outputs": [
@@ -1071,7 +1071,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Function for prediction\n",
     "def prediction(g, a, hyt, ht, m, w, r, gl, b, s):\n",
     "    # Gender\n",
@@ -1140,10 +1139,10 @@
     "    elif s == \"smokes\":\n",
     "        s = 3\n",
     "\n",
-    "    pred_logistic = logistic_model.predict([[g, a, hyt, ht, m, w, r, gl, b, s]])\n",
+    "    pred_logistic_prob = logistic_model.predict_proba([[g, a, hyt, ht, m, w, r, gl, b, s]])[0, 1]\n",
     "    pred_rf = random_forest_model.predict([[g, a, hyt, ht, m, w, r, gl, b, s]])\n",
-    "    \n",
-    "    return pred_logistic[0], pred_rf[0]\n",
+    "\n",
+    "    return pred_logistic_prob, pred_rf[0]\n",
     "\n",
     "# Input from user\n",
     "g = input(\"Enter your gender: \").lower()\n",
@@ -1158,11 +1157,19 @@
     "s = input(\"Smoking Status => unknown/never smoked/formerly smoked/smokes: \").lower()\n",
     "\n",
     "# Call prediction function\n",
-    "op_logistic, op_rf = prediction(g, a, hyt, ht, m, w, r, gl, b, s)\n",
-    "if op_logistic == 1:\n",
+    "op_logistic_prob, op_rf = prediction(g, a, hyt, ht, m, w, r, gl, b, s)\n",
+    "\n",
+    "# Adjusted threshold values\n",
+    "no_risk_threshold = 1.0\n",
+    "risk_threshold = 0.1\n",
+    "\n",
+    "# Classify predictions based on thresholds\n",
+    "if op_logistic_prob >= no_risk_threshold:\n",
+    "    print(\"Logistic Regression Prediction: Patient has no risk of stroke\")\n",
+    "elif op_logistic_prob >= risk_threshold:\n",
     "    print(\"Logistic Regression Prediction: Person has chances of having a stroke\")\n",
     "else:\n",
-    "    print(\"Logistic Regression Prediction: Patient has no risk of stroke\")\n",
+    "    print(\"Logistic Regression Prediction: Patient has a significant risk of stroke\")\n",
     "\n",
     "if op_rf == 1:\n",
     "    print(\"Random Forest Prediction: Person has chances of having a stroke\")\n",
@@ -1172,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "27c95216",
    "metadata": {},
    "outputs": [],
